web-infras/parser/tests/fixtures/babel/es2022/class-static-block/await-binding-in-async-arrow-function-in-static-block/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (7,32)
7|C = class { static { async ({ [await]: x }) => {} } };
 |                              ^
